Fixed white space at the bottom of index
Nailed it

--- a/css/index.css
+++ b/css/index.css
@@ -1,9 +1,3 @@
-#landing
-{
- /*background-color:black;
- height:120vh;*/
-}
-
 .logo
 {
  width:100%;
@@ -16,12 +10,13 @@
 body
 {
 	margin: 0;
+	background-color:#55489d;
 }
-#body
+#land
 {
- height:100%;
+ height:100vh;
  width:100%; 
- background-image:linear-gradient(#000000, #55489d)
+ background-image:linear-gradient(#000000, #55489d);
 }
 
 #headText
@@ -222,7 +217,7 @@ a:link
 a:hover > h1
 {
 	text-decoration:none;
-	color:black;
+	color:#A49BD5;
 }
 
 
@@ -345,31 +340,6 @@ a:visited
  font-size:3vh;
 }
 
-
-
-#footer
-{
- width:100%;
- background-color:#55489d;
- height:20vh;
- display:grid;
- grid-template-columns:100%;
- grid-template-rows:33% 33% 33%;
- justify-intro:center;
-}
-
-@media only screen and (min-width:1081px)
-{
- #footer
- {
-  display:grid;
-  grid-template-columns:33% 33% 33%;
-  grid-template-rows:100%;
-  justify-intro:center;
-  height:10vh;
- }
-}
-
 #dropdowns
 {
  width:80%;
@@ -460,72 +430,6 @@ a:visited
  color:black;
  font-size:3vh;
 }
-
-
-#footer
-{
- width:100%;
- background-color:#55489d;
- height:20vh;
- display:grid;
- grid-template-columns:100%;
- grid-template-rows:33% 33% 33%;
- justify-content:center;
-}
-
-@media only screen and (min-width:1081px)
-{
- #footer
- {
-  display:grid;
-  grid-template-columns:33% 33% 33%;
-  grid-template-rows:100%;
-  justify-content:center;
-  height:10vh;
- }
-}
-
-#footer > div
-{
- text-align:center;
-}
-
-/*#footer > div:hover
-{
- background-color:#757096;
-}*/
-
-#footer > div > p > a
-{
- color:white;
- font-size:20px;
- font-family:Gotham, Helvetica, Arial;
-}
-
-#footer > div > p > a:link
-{
- text-decoration:none;
-}
-
-#footer > div > p > a:visited
-{
- color:white;
- text-decoration:none;
-}
-
-#footer > div > p > a:hover
-{
- color:#FFFA85;
- text-decoration:none;
-}
-
-#footer > div > p > a:active
-{
- color:#FFFA85;
- text-decoration:none;
-}
-
-
 
 
 
